--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mandelbrot)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(mandelbrot main.cpp Bitmap.cpp Mandelbrot.cpp Zoom.h ZoomList.cpp)
+add_executable(mandelbrot main.cpp Bitmap.cpp Mandelbrot.cpp Zoom.h ZoomList.cpp FractalCreator.cpp RGB.cpp)
